# bird-mat-calc

./: Cargo.toml  LICENSE  README.md
src/: main.rs  matrix.rs
src/matrix/: basis.rs  calc.rs
tests/: matrix.rs
